# floaterm

./: .gitignore  LICENSE  Package.swift  README.md  package-lock.json  package.json  server.js
.claude/: launch.json
.codex/environments/: environment.toml
.github/workflows/: ci.yml  release.yml  test.yml
Sources/App/: AppModel.swift  FloatermApp.swift
Sources/Floaterm/: AppState.swift  Constants.swift  FloatermApp.swift
Sources/Floaterm/Canvas/: CanvasShape.swift  (+5 more)
Sources/Models/: CanvasModel.swift
Sources/Services/: TerminalSession.swift  WorkspacePersistenceController.swift
Sources/Stores/: AppSettingsStore.swift  CanvasStore.swift
Sources/Support/: AppResourceLocator.swift  CanvasInputMapping.swift  FloatermTheme.swift
Sources/Views/: CanvasMinimapView.swift  CanvasView.swift  ContentView.swift
TermCanvas/: Package.swift
TermCanvas/docs/: next-ideas.md
TermCanvas/script/: build_and_run.sh
Tests/FloatermTests/: AppResourceLocatorTests.swift  AppSettingsStoreTests.swift  CanvasInputMappingTests.swift  CanvasStoreTests.swift  CanvasViewportInteractionTests.swift  TerminalNodeViewTests.swift  WorkspacePersistenceControllerTests.swift
docs/: next-ideas.md  releasing.md
electron/: main.js
public/: index.html  manifest.json  sw.js
public/css/: style.css
public/js/: box.js  canvas.js  input.js  main.js  terminal-manager.js
script/: build_and_run.sh  build_release.sh
scripts/: patch-electron-plist.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  server.rs
test/: box.test.mjs  canvas.test.mjs  server.test.mjs
(+33 files in other folders)
