[package]
name = "floaterm"
version = "2.0.0"
description = "A spatial terminal workspace"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.10.3", features = [] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
portable-pty = "0.8"
futures-util = "0.3"
dirs = "6"
